Made changes to the styling of the web page

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,11 +6,13 @@
 
 /* Smooth scrolling */
 html {
+  background: #000;
   scroll-behavior: smooth;
 }
 
 /* Better text rendering */
 body {
+  background-color: #020617;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
